--- a/now.json
+++ b/now.json
@@ -3,5 +3,5 @@
     "builds": [
         { "src": "package.json", "use": "@now/static-build", "config": {"distDir": "dist"} }
       ],
-    "regions": ["all"]
+    "regions": ["arn1"]
 }
