--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "dependencies": {
         "core-js": "^3.6.5",
         "modern-normalize": "^0.6.0",
+        "prop-types": "^15.7.2",
         "react": "0.0.0-experimental-e5d06e34b",
         "react-dom": "0.0.0-experimental-e5d06e34b",
         "styled-components": "^5.1.0"
